# phasar

./: .clang-tidy  AbstractMemoryLocationFactory_8h.html  AbstractMemoryLocationFactory_8h_source.html  AbstractMemoryLocation_8h.html  AbstractMemoryLocation_8h_source.html  AdjacencyList_8h.html  AdjacencyList_8h_source.html  AliasAnalysisType_8h.html  AliasAnalysisType_8h_source.html  AliasAnalysisView_8h.html  AliasAnalysisView_8h_source.html  AliasInfoBase_8h.html  AliasInfoBase_8h_source.html  AliasInfoTraits_8h.html  AliasInfoTraits_8h_source.html  AliasInfo_8h.html  AliasInfo_8h_source.html  AliasIterator_8h.html  AliasIterator_8h_source.html  AliasResult_8h.html  AliasResult_8h_source.html  AliasSetOwner_8h.html  AliasSetOwner_8h_source.html  AlignNum_8h.html  AlignNum_8h_source.html  AllBot_8h.html  AllBot_8h_source.html  AllSanitized_8h.html  AllSanitized_8h_source.html  AllocatedTypes_8h.html  AllocatedTypes_8h_source.html  AnalysisDomain_8h.html  AnalysisDomain_8h_source.html  AnalysisPrinterBase_8h.html  AnalysisPrinterBase_8h_source.html  AnalysisProperties_8h.html  AnalysisProperties_8h_source.html  AnalysisSetup_8h.html  AnalysisSetup_8h_source.html  AnalysisStrategy_8h.html  (+3418 more)
cmake/: phasar_macros.cmake
examples/how-to/06-run-monoifds-analysis/: CMakeLists.txt  README.md  helper-analyses.cpp  manual.cpp
examples/llvm-hello-world/: CMakeLists.txt
lib/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+176 more)
(+162 files in other folders)
